--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ isort = "^5.10.1"
 pytest = "^7.1.2"
 mypy = "^0.961"
 PettingZoo = "^1.18.1"
+pygame = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 
