--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,4 +18,4 @@ jobs:
           pip install -r requirements/aintelope.txt
           pip install -r requirements/aintelope_dev.txt
       - name: Run tests
-        run: python -m pytest --cov=aintelope test
+        run: python -m pytest --cov=aintelope tests
