--- a/aintelope/config/config_baseline_experiment.yaml
+++ b/aintelope/config/config_baseline_experiment.yaml
@@ -1,6 +1,10 @@
-timestamp: ${now:%Y%m%d%H%M%S}
-experiment_name: hunger
-experiment_dir: outputs/${experiment_name}_${timestamp}/
+timestamp: &timestamp ${now:%Y%m%d%H%M%S}
+experiment_name: &experiment_name hunger
+experiment_dir: &experiment_dir outputs/${experiment_name}_${timestamp}/
+
+hydra:
+  run:
+    dir: ${experiment_dir}/hydra_logs/
 
 trainer_params:
   resume_from_checkpoint: False
@@ -28,7 +32,6 @@ hparams:
   episode_length: 1010
   warm_start_steps: 100
   log_figures_every_n_epochs: 5
-  every_n_epochs: 3 # how often save a model
   env_params:
     num_iters: 1000 # duration of the game
     map_min: 0
@@ -40,8 +43,3 @@ hparams:
     amount_water_holes: 0
   agent_params:
     target_instincts: [smell] #[hunger, thirst, curiosity]
-
-hydra:
-  run:
-    dir: ${experiment_dir}/hydra_logs/
-
