--- a/aintelope/config/config_experiment.yaml
+++ b/aintelope/config/config_experiment.yaml
@@ -15,9 +15,12 @@ hparams:
   lr: 0.001
   __env: savanna-zoo-parallel-v2
   __env_entry_point: "aintelope.environments.savanna_zoo:SavannaZooParallelEnv"
-  __env_type: zoo
-  env: savanna-safetygrid-parallel-v1
-  env_entry_point: "aintelope.environments.savanna_safetygrid:SavannaGridworldParallelEnv"
+  __env_type: gym
+  ___env: savanna-safetygrid-parallel-v1
+  ___env_entry_point: "aintelope.environments.savanna_safetygrid:SavannaGridworldParallelEnv"
+  ___env_type: zoo
+  env: savanna-safetygrid-sequential-v1
+  env_entry_point: "aintelope.environments.savanna_safetygrid:SavannaGridworldSequentialEnv"
   env_type: zoo
   model: dqn
   agent_id: instinct_agent
