--- a/aintelope/config/config_experiment.yaml
+++ b/aintelope/config/config_experiment.yaml
@@ -39,6 +39,8 @@ hparams:
     amount_agents: 1 
     amount_grass_patches: 1
     amount_water_holes: 0
+    test_death: False      # needed for trainer tests
+    seed: null      # needed for trainer tests
   agent_params:
     target_instincts: []
 
