--- a/aintelope/config/config_experiment.yaml
+++ b/aintelope/config/config_experiment.yaml
@@ -41,13 +41,14 @@ hparams:
   env_params:
     env_experiment: aintelope.aintelope_savanna
     level: 0
-    map_randomization_frequency: 3
-    num_iters: 200 # duration of a single episode. NB! warm_start_steps will be subtracted from this value
-    map_min: 0      # unused for new environments, is always 0
-    map_max: 10     # inclusive max, map resizing is not yet implemented for new environments, but can be added later if needed
+    map_max: 13     # used for old AIntelope environment
+    map_width: ${map_max}   # used for Gridworld environments
+    map_height: ${map_max}   # used for Gridworld environments
+    render_agent_radius: 10     # to make whole map visible while still agent-centric, set the value to "max(map_width, map_height) - 3" in case of using Gridworld environments
+    map_randomization_frequency: 1
+    num_iters: 20 # duration of a single episode. NB! warm_start_steps will be subtracted from this value
     render_mode: null
     # render_map_max: 5     # this field is currently not used anywhere in code
-    render_agent_radius: 10     # make whole map visible while still agent-centric
     #
     amount_agents: 1  
     amount_grass_patches: 2
