--- a/aintelope/config/config_experiment.yaml
+++ b/aintelope/config/config_experiment.yaml
@@ -23,6 +23,7 @@ hparams:
   model: dqn
   unit_test_mode: False      # is set during tests in order to speed up DQN computations
   agent_id: q_agent
+  num_episodes: 5   # TEMP for tests only atm
   traintest_mode: train
   train_episodes: 10 
   test_episodes: 3
