Exclude git submodules and .vshistory folder from black

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,16 @@ packages = ["aintelope", "tests"]
 
 [tool.black]
 line-length = 88
+force-exclude = '''
+/(
+ai_safety_gridworlds
+| gymnasium
+| outputs
+| pettingzoo
+| pycolab
+| \.vshistory
+)/
+'''
 
 [tool.flake8]
 max-line-length = 88
