--- a/aintelope/config/config_gridsearch_reward.yaml
+++ b/aintelope/config/config_gridsearch_reward.yaml
@@ -1,5 +1,5 @@
 hparams:
-  gridsearch_trial_no: ${range:0,3}        # used just to repeat same experiment multiple times
+  gridsearch_trial_no: ${range:0,10}        # used just to repeat same experiment multiple times
   params_set_title: "reward"
   batch_size: 16
   lr: 0.015
@@ -27,7 +27,7 @@ hparams:
   test_episodes: 10     # 2 # will be added to train episodes
   env_params:
     num_iters: [300, 400] # duration of a single episode. NB! warm_start_steps will be subtracted from this value
-    map_max: [7, 9]     # used for old AIntelope environment
+    map_max: 7  # [7, 9]     # used for old AIntelope environment
     map_width: ${hparams.env_params.map_max}   # NB! here it is exclusive max, used for Gridworld environments. Also, this width includes the walls at the border of the game, so 2 units of walls. Therefore, interior is map_width - 2.
     map_height: ${hparams.env_params.map_max}   # NB! here it is exclusive max, used for Gridworld environments. Also, this width includes the walls at the border of the game, so 2 units of walls. Therefore, interior is map_height - 2.
     #
