--- a/aintelope/config/config_trials_instinct.yaml
+++ b/aintelope/config/config_trials_instinct.yaml
@@ -1,20 +1,20 @@
 hparams:
-  gridsearch_trial_no: ${range:0,10}        # used just to repeat same experiment multiple times
-  params_set_title: "mixed"
+  gridsearch_trial_no: ${range:0,100}        # used just to repeat same experiment multiple times
+  params_set_title: "instinct"
   batch_size: 16
   lr: 0.015
   amsgrad: True
   use_separate_models_for_each_experiment: True
   model_params:
     hidden_sizes: [[8,16,8]]        # NB! use nested list here since we do not want to interpret the inner list as grid search combinations source
-    num_conv_layers: [2, 3]
-    conv_size: [2, 3]
-    gamma: [0.7, 0.9]
+    num_conv_layers: null # 2
+    conv_size: null # 2
+    gamma: null # 0.7
     tau: 0.05
-    eps_start: 0.66
+    eps_start: 0.0
     eps_end: 0.0
-    instinct_bias_epsilon_start: 0.5
-    instinct_bias_epsilon_end: 0.0
+    instinct_bias_epsilon_start: 1.0
+    instinct_bias_epsilon_end: 1.0
     apply_instinct_eps_before_random_eps: True
     replay_size: 99
     eps_last_pipeline_cycle: 1      # could be -1 but current cache has 1 so let it be
@@ -23,10 +23,10 @@ hparams:
     eps_last_frame: ${hparams.env_params.num_iters}       # use -1 when iteration counting for eps is disabled
   trial_length: -1 # 10
   num_pipeline_cycles: 0
-  num_episodes: [30, 40]    # 0  # how long to train. # TODO: move num_episodes to model_params
-  test_episodes: 10     # 2 # will be added to train episodes
+  num_episodes: 0  # how long to train. # TODO: move num_episodes to model_params
+  test_episodes: 10  # will be added to train episodes
   env_params:
-    num_iters: [300, 400] # duration of a single episode. NB! warm_start_steps will be subtracted from this value
+    num_iters: 400 # [300, 400] # duration of a single episode. NB! warm_start_steps will be subtracted from this value
     map_max: 7  # [7, 9]     # used for old AIntelope environment
     map_width: ${hparams.env_params.map_max}   # NB! here it is exclusive max, used for Gridworld environments. Also, this width includes the walls at the border of the game, so 2 units of walls. Therefore, interior is map_width - 2.
     map_height: ${hparams.env_params.map_max}   # NB! here it is exclusive max, used for Gridworld environments. Also, this width includes the walls at the border of the game, so 2 units of walls. Therefore, interior is map_height - 2.
