Added do_not_enforce_checkpoint_file_existence_during_test config flag for use case where a non-local model is being trained over API connection

--- a/aintelope/config/config_experiment_exampleagent.yaml
+++ b/aintelope/config/config_experiment_exampleagent.yaml
@@ -25,6 +25,7 @@ trainer_params:
 hparams:
   gridsearch_trial_no: 0
   params_set_title: "exampleagent"
+  do_not_enforce_checkpoint_file_existence_during_test: False
   aggregated_results_file: outputs/${hparams.params_set_title}.jsonl
   env: savanna-safetygrid-parallel-v1
   env_entry_point: "aintelope.environments.savanna_safetygrid:SavannaGridworldParallelEnv"
