--- a/aintelope/config/config_tests.yaml
+++ b/aintelope/config/config_tests.yaml
@@ -5,15 +5,10 @@
 # Repository:
 # https://github.com/biological-alignment-benchmarks/biological-alignment-gridworlds-benchmarks
 
-food_5x5:   
+integration_test:  
+  num_episodes: 50 # how long to train. # TODO: move num_episodes to model_params
+  test_episodes: 30 # will be added to train episodes 
+  show_plot: False
   env_params:
-    env_experiment: "ai_safety_gridworlds.aintelope_savanna"
-    # num_iters: 100  # TODO: if you override this here then you need to override also eps_last_frame!
-    amount_agents: 1 
-    amount_grass_patches: 1
-    map_width: 5
-    map_height: 5
-    render_agent_radius: 2
-    #
-    scores:
-        FOOD_SCORE: '{"FOOD": 20}'
+    num_iters: 100  # TODO: if you override this here then you need to override also eps_last_frame!
+    map_max: 5
