--- a/aintelope/config/default_config.yaml
+++ b/aintelope/config/default_config.yaml
@@ -41,6 +41,7 @@ hparams:
   use_separate_models_for_each_experiment: True
   agent_params:
     target_handwritten_rules: [food,drink,gold,silver,danger,predator,collision,antimovement]    
+    ppo_n_steps: 32
   model_params:
     use_weight_sharing: False
     eps_start: 0.66
