--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ authors = [
   {name = "Hauke Rehfeld", email = "git@haukerehfeld.de"},
   {name = "Orpheus Lummis", email = "o@orpheuslummis.info"}
 ]
-requires-python = ">=3.10.3"
+requires-python = ">=3.10.3,<3.11"
 dependencies = [
   "diskcache==5.6.3",
   "filelock==3.13.1",
