--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,16 @@ dependencies = [
   "tiktoken==0.9.0",
 ]
 
+[project.optional-dependencies]
+dev = [
+  "pytest>=7.0.0",
+  "pytest-cov>=4.0.0",
+  "black>=23.0.0",
+  "mypy>=1.0.0",
+  "isort>=5.12.0",
+  "flake8>=6.0.0"
+]
+
 [project.scripts]
 aintelope-gui = "aintelope.__main__:gui_main"
 
