--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,7 +1,5 @@
 name: Run pytest
-
 on: [push]
-
 jobs:
   pytest:
     runs-on: ubuntu-latest
@@ -13,12 +11,8 @@ jobs:
         with:
           python-version: '3.10'
           cache: 'pip'
-          cache-dependency-path: |
-            requirements/api.txt
-            requirements/dev.txt
+          cache-dependency-path: pyproject.toml
       - name: Install dependencies
-        run: |
-          pip install -r requirements/api.txt
-          pip install -r requirements/dev.txt
+        run: pip install -e ".[dev]"
       - name: Run tests
         run: python -m pytest --cov=aintelope tests
