--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,6 +13,8 @@ jobs:
           cache: 'pip'
           cache-dependency-path: pyproject.toml
       - name: Install dependencies
-        run: pip install -e ".[dev]"
+        run: |
+          pip install -e "git+https://github.com/biological-alignment-benchmarks/ai-safety-gridworlds@biological-compatibility-benchmarks#egg=ai-safety-gridworlds"
+          pip install -e ".[dev]"
       - name: Run tests
         run: python -m pytest --cov=aintelope tests
